[gd_scene load_steps=3 format=3 uid="uid://budwigivpj3i6"]

[ext_resource type="Script" path="res://UserInterface/victory_layer.gd" id="1_8s3hn"]

[sub_resource type="LabelSettings" id="LabelSettings_onjop"]
font_size = 96

[node name="VictoryLayer" type="CanvasLayer"]
script = ExtResource("1_8s3hn")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.490196)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Victory"
label_settings = SubResource("LabelSettings_onjop")
horizontal_alignment = 1

[node name="StarContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Star1" type="TextureRect" parent="CenterContainer/PanelContainer/VBoxContainer/StarContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 3
expand_mode = 2
stretch_mode = 5

[node name="Star2" type="TextureRect" parent="CenterContainer/PanelContainer/VBoxContainer/StarContainer"]
unique_name_in_owner = true
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 3
expand_mode = 2
stretch_mode = 5

[node name="Star3" type="TextureRect" parent="CenterContainer/PanelContainer/VBoxContainer/StarContainer"]
unique_name_in_owner = true
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 3
expand_mode = 2
stretch_mode = 5

[node name="SurvivedLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Survived +1"
horizontal_alignment = 1

[node name="HealthLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Max Health +1"
horizontal_alignment = 1

[node name="BankLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "500+ Gold +1"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="RetryButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Retry"

[node name="QuitButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Quit"

[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
